Only unit tests when it needs to.
    Doesn't work really