@@ -19,4 +19,4 @@ ASCENDING
 junit-4.11.jar
 hamcrest-core-1.3.jar
 /JUnitTests
-860
+760
