@@ -1,22 +1,109 @@
-There were errors running JUnit Test 
-Errors: '' 
-Output: 'JUnit version 4.10
-Could not find class: JUnitTest
+Error uploading spreadsheet to dropbox. com.dropbox.core.DbxException$RetryLater: 
+<html>
+<head><title>Dropbox - 5xx</title>
+<link href="https://www.dropbox.com/static/css/main.css" rel="stylesheet" type="text/css">
+<link rel="shortcut icon" href="/static/images/favicon.ico"/>
+</head>
+<body style="background-color:#fff">
+<br/><br/>
+<div align="center">
+<table><tr><td width="600px">
+<center><img id="errorimage" src="/static/images/sickbox.png"/></center>
+<div id="errorbox">
+<h1>Error</h1>Something went wrong. Don't worry, your files are still safe and the Dropboxers have been notified. Check out our <a href="https://www.dropbox.com/help">Help Center</a> and <a href="https://forums.dropbox.com">forums</a> for help, or head back to <a href="https://www.dropbox.com/home">home</a>.
+</div>
+</td></tr></table>
+</div>
 
-Time: 0
+<script type="text/javascript" src="/static/javascript/external/prototype.js"></script>
+<script>
+message = {"fr": "\x3ch1>Error\x3c/h1>Something went wrong. Don't worry, your files are still safe and the Dropboxers have been notified. Check out our \x3ca href=\"https://www.dropbox.com/help\">Help Center\x3c/a> and \x3ca href=\"https://forums.dropbox.com\">forums\x3c/a> for help, or head back to \x3ca href=\"https://www.dropbox.com/home\">home\x3c/a>.", "de": "\x3ch1>Fehler\x3c/h1>Es ist etwas schief gelaufen. Keine Angst, deine Dateien sind weiterhin sicher und die Dropboxer wurden benachrichtigt. Suche im \x3ca href=\"https://www.dropbox.com/help\">Hilfecenter\x3c/a> oder in den \x3ca href=\"https://forums.dropbox.com\">Foren\x3c/a> nach Hilfe. Oder geh zur\u00fcck zur \x3ca href=\"https://www.dropbox.com/home\">Startseite\x3c/a>.", "ko": "\x3ch1>\uc624\ub958\x3c/h1>\ubb38\uc81c\uac00 \ubc1c\uc0dd\ud588\uc2b5\ub2c8\ub2e4. \ud30c\uc77c\uc774 \uc190\uc0c1\ub418\uc9c0 \uc54a\uc558\uc73c\ubbc0\ub85c \uc548\uc2ec\ud558\uc2dc\uae30 \ubc14\ub77c\uba70, \uc774 \ubb38\uc81c\ub294 Dropboxer \uc0ac\uc6a9\uc790\uc5d0\uac8c \ud1b5\ubcf4\ub418\uc5c8\uc2b5\ub2c8\ub2e4. \ub3c4\uc6c0\uc774 \ud544\uc694\ud55c \uacbd\uc6b0 Dropbox\uc758 \x3ca href=\"https://www.dropbox.com/help\">\ub3c4\uc6c0\ub9d0 \uc13c\ud130\x3c/a> \ubc0f \x3ca href=\"https://forums.dropbox.com\">\ud3ec\ub7fc\x3c/a>\uc744 \ucc38\uc870\ud558\uac70\ub098 \x3ca href=\"https://www.dropbox.com/home\">\ud648\x3c/a>\uc73c\ub85c \ub3cc\uc544\uac00\uc138\uc694.", "ja": "\x3ch1>\u30a8\u30e9\u30fc\x3c/h1>\u6240\u5b9a\u306e\u51e6\u7406\u304c\u5b8c\u4e86\u3057\u307e\u305b\u3093\u3067\u3057\u305f\u3002\u3054\u5229\u7528\u306e\u30d5\u30a1\u30a4\u30eb\u306f\u5b89\u5168\u306b\u4fdd\u5b58\u3055\u308c\u3066\u304a\u308a\u3001Dropbox \u30b9\u30bf\u30c3\u30d5\u306b\u554f\u984c\u306e\u901a\u77e5\u304c\u9001\u3089\u308c\u3066\u3044\u307e\u3059\u3002\x3ca href=\"https://www.dropbox.com/help\">\u30d8\u30eb\u30d7\u30bb\u30f3\u30bf\u30fc\x3c/a>\u3068\x3ca href=\"https://forums.dropbox.com\">\u30d5\u30a9\u30fc\u30e9\u30e0\x3c/a>\u3067\u4e0d\u660e\u306a\u70b9\u3092\u304a\u8abf\u3079\u304f\u3060\u3055\u3044\u3002\u307e\u305f\u306f\u3001\x3ca href=\"https://www.dropbox.com/home\">\u30db\u30fc\u30e0\x3c/a>\u306b\u623b\u3063\u3066\u304f\u3060\u3055\u3044\u3002", "es": "\x3ch1>Error\x3c/h1>Algo sali\u00f3 mal. No te preocupes; tus archivos a\u00fan est\u00e1n a salvo y los dropboxers han recibido una notificaci\u00f3n. Consulta el \x3ca href=\"https://www.dropbox.com/help\">Centro de ayuda\x3c/a> y los \x3ca href=\"https://forums.dropbox.com\">foros\x3c/a> para obtener ayuda o vuelve al \x3ca href=\"https://www.dropbox.com/home\">Inicio\x3c/a>."};
+function read_cookie (name) {
+	    var nameEQ = name + "=";
+	    var ca = document.cookie.split(';');
+	    for (var i = 0; i < ca.length; i++) {
+		    var c = ca[i];
+		    while (c.charAt(0) == ' ') {
+                c = c.substring(1, c.length);
+            }
+		    if (c.indexOf(nameEQ) === 0) {
+                return c.substring(nameEQ.length, c.length);
+            }
+	    }
+	    return null;
+}
+Event.observe(document, 'dom:loaded', function () {
+    var locale = read_cookie('locale');
+    if (locale) {
+       var msg = message[locale];
+       if (msg) {
+           $('errorbox').update(msg);
+       }
+    }
+});
+</script>
 
-OK (0 tests)
+</body>
+</html>
 
-'
-Error running Simple Unit Test 'P2_MattLyons_26_UnitNotStatic.zip':
-\\dist113\dhs_stud\DHSStudent14\141lyonsm\My Documents\NetBeansProjects\Java-Grader\downloads\P2_MattLyons_26_UnitNotStatic\P2_MattLyons_25_UnitTestTest\UnitTest2.java:1: error: class UnitTest1 is public, should be declared in a file named UnitTest1.java
-public class UnitTest1{
-       ^
-1 error
+com.dropbox.core.DbxException$RetryLater: 
+<html>
+<head><title>Dropbox - 5xx</title>
+<link href="https://www.dropbox.com/static/css/main.css" rel="stylesheet" type="text/css">
+<link rel="shortcut icon" href="/static/images/favicon.ico"/>
+</head>
+<body style="background-color:#fff">
+<br/><br/>
+<div align="center">
+<table><tr><td width="600px">
+<center><img id="errorimage" src="/static/images/sickbox.png"/></center>
+<div id="errorbox">
+<h1>Error</h1>Something went wrong. Don't worry, your files are still safe and the Dropboxers have been notified. Check out our <a href="https://www.dropbox.com/help">Help Center</a> and <a href="https://forums.dropbox.com">forums</a> for help, or head back to <a href="https://www.dropbox.com/home">home</a>.
+</div>
+</td></tr></table>
+</div>
 
-Error running Simple Unit Test 'P2_MattLyons_27_UnitPrivate.zip':
-\\dist113\dhs_stud\DHSStudent14\141lyonsm\My Documents\NetBeansProjects\Java-Grader\downloads\P2_MattLyons_27_UnitPrivate\UnitTest3.java:1: error: class UnitTest1 is public, should be declared in a file named UnitTest1.java
-public class UnitTest1{
-       ^
-1 error
+<script type="text/javascript" src="/static/javascript/external/prototype.js"></script>
+<script>
+message = {"fr": "\x3ch1>Error\x3c/h1>Something went wrong. Don't worry, your files are still safe and the Dropboxers have been notified. Check out our \x3ca href=\"https://www.dropbox.com/help\">Help Center\x3c/a> and \x3ca href=\"https://forums.dropbox.com\">forums\x3c/a> for help, or head back to \x3ca href=\"https://www.dropbox.com/home\">home\x3c/a>.", "de": "\x3ch1>Fehler\x3c/h1>Es ist etwas schief gelaufen. Keine Angst, deine Dateien sind weiterhin sicher und die Dropboxer wurden benachrichtigt. Suche im \x3ca href=\"https://www.dropbox.com/help\">Hilfecenter\x3c/a> oder in den \x3ca href=\"https://forums.dropbox.com\">Foren\x3c/a> nach Hilfe. Oder geh zur\u00fcck zur \x3ca href=\"https://www.dropbox.com/home\">Startseite\x3c/a>.", "ko": "\x3ch1>\uc624\ub958\x3c/h1>\ubb38\uc81c\uac00 \ubc1c\uc0dd\ud588\uc2b5\ub2c8\ub2e4. \ud30c\uc77c\uc774 \uc190\uc0c1\ub418\uc9c0 \uc54a\uc558\uc73c\ubbc0\ub85c \uc548\uc2ec\ud558\uc2dc\uae30 \ubc14\ub77c\uba70, \uc774 \ubb38\uc81c\ub294 Dropboxer \uc0ac\uc6a9\uc790\uc5d0\uac8c \ud1b5\ubcf4\ub418\uc5c8\uc2b5\ub2c8\ub2e4. \ub3c4\uc6c0\uc774 \ud544\uc694\ud55c \uacbd\uc6b0 Dropbox\uc758 \x3ca href=\"https://www.dropbox.com/help\">\ub3c4\uc6c0\ub9d0 \uc13c\ud130\x3c/a> \ubc0f \x3ca href=\"https://forums.dropbox.com\">\ud3ec\ub7fc\x3c/a>\uc744 \ucc38\uc870\ud558\uac70\ub098 \x3ca href=\"https://www.dropbox.com/home\">\ud648\x3c/a>\uc73c\ub85c \ub3cc\uc544\uac00\uc138\uc694.", "ja": "\x3ch1>\u30a8\u30e9\u30fc\x3c/h1>\u6240\u5b9a\u306e\u51e6\u7406\u304c\u5b8c\u4e86\u3057\u307e\u305b\u3093\u3067\u3057\u305f\u3002\u3054\u5229\u7528\u306e\u30d5\u30a1\u30a4\u30eb\u306f\u5b89\u5168\u306b\u4fdd\u5b58\u3055\u308c\u3066\u304a\u308a\u3001Dropbox \u30b9\u30bf\u30c3\u30d5\u306b\u554f\u984c\u306e\u901a\u77e5\u304c\u9001\u3089\u308c\u3066\u3044\u307e\u3059\u3002\x3ca href=\"https://www.dropbox.com/help\">\u30d8\u30eb\u30d7\u30bb\u30f3\u30bf\u30fc\x3c/a>\u3068\x3ca href=\"https://forums.dropbox.com\">\u30d5\u30a9\u30fc\u30e9\u30e0\x3c/a>\u3067\u4e0d\u660e\u306a\u70b9\u3092\u304a\u8abf\u3079\u304f\u3060\u3055\u3044\u3002\u307e\u305f\u306f\u3001\x3ca href=\"https://www.dropbox.com/home\">\u30db\u30fc\u30e0\x3c/a>\u306b\u623b\u3063\u3066\u304f\u3060\u3055\u3044\u3002", "es": "\x3ch1>Error\x3c/h1>Algo sali\u00f3 mal. No te preocupes; tus archivos a\u00fan est\u00e1n a salvo y los dropboxers han recibido una notificaci\u00f3n. Consulta el \x3ca href=\"https://www.dropbox.com/help\">Centro de ayuda\x3c/a> y los \x3ca href=\"https://forums.dropbox.com\">foros\x3c/a> para obtener ayuda o vuelve al \x3ca href=\"https://www.dropbox.com/home\">Inicio\x3c/a>."};
+function read_cookie (name) {
+	    var nameEQ = name + "=";
+	    var ca = document.cookie.split(';');
+	    for (var i = 0; i < ca.length; i++) {
+		    var c = ca[i];
+		    while (c.charAt(0) == ' ') {
+                c = c.substring(1, c.length);
+            }
+		    if (c.indexOf(nameEQ) === 0) {
+                return c.substring(nameEQ.length, c.length);
+            }
+	    }
+	    return null;
+}
+Event.observe(document, 'dom:loaded', function () {
+    var locale = read_cookie('locale');
+    if (locale) {
+       var msg = message[locale];
+       if (msg) {
+           $('errorbox').update(msg);
+       }
+    }
+});
+</script>
 
+</body>
+</html>
+
+	at com.dropbox.core.DbxRequestUtil.unexpectedStatus(DbxRequestUtil.java:205)
+	at com.dropbox.core.DbxClient$SingleUploader$1.handle(DbxClient.java:748)
+	at com.dropbox.core.DbxClient$SingleUploader$1.handle(DbxClient.java:744)
+	at com.dropbox.core.DbxRequestUtil.finishResponse(DbxRequestUtil.java:296)
+	at com.dropbox.core.DbxClient$SingleUploader.finish(DbxClient.java:744)
+	at com.dropbox.core.DbxClient.finishUploadFile(DbxClient.java:615)
+	at com.dropbox.core.DbxClient.uploadFile(DbxClient.java:548)
+	at com.dropbox.core.DbxClient.uploadFile(DbxClient.java:500)
+	at DropboxGrader.TextGrader.TextGrader.upload(TextGrader.java:141)
+	at DropboxGrader.TextGrader.TextGrader.uploadTable(TextGrader.java:124)
+	at DropboxGrader.UnitTesting.UnitTester$1.run(UnitTester.java:331)
+	at DropboxGrader.WorkerThread.run(WorkerThread.java:47)
+	at java.lang.Thread.run(Thread.java:724)
