@@ -28,7 +28,8 @@
     <li>Sometimes closing fails, should make a timer for a minute to force close if it hasn't after a minute.</li>
     <li>Saving bottom toolbar for grade size sometimes screws up in grader</li>
     <li>Big downloaded files hangs startup a lot</li>
-    <li>Gradesheet is uploaded twice rapidly by unit tests</li>
+    <li>JUnit Running not recognizing test class (need to run my own jar)</li>
+    <li>It is possible I broke some simple unit testing again (method detection when static isn't allowed).</li>
 </ul>
 <h3>Visual</h3>
 <ul>
@@ -57,6 +58,8 @@
     <li>display current fileQueue</li>
     <li>Switch grade spreadsheets</li>
     <li>Create spacer in gradebook</li>
+    <li>Don't allow to set grade in gradebook view for unit tested assignments</li>
+    <li>Show graded date in Gradebook</li>
 </ul>
 <h3>Required Additions</h3>
 <ul>
@@ -82,4 +85,5 @@
     <li>Redo zip structure required, name_assignmentNumber_assignmentName<br/>
     use stored name to determine class period and attempt to fix assignment numbers based on other submitted assignment names</li>
     <li>Remove class period from config and instead put it in the bulk filter options</li>
+    <li>Add button to force rerun unit tests</li>
 </ul>
